--- a/css/styles.css
+++ b/css/styles.css
@@ -16458,6 +16458,11 @@ body {
   background-image: linear-gradient(135deg, #0061f2 0%, rgba(105, 0, 199, 0.8) 100%) !important;
 }
 
+.bg-gradient-primary-only {
+  background-color: #000C38 !important;
+  background-image: #000C38 !important;
+}
+
 .bg-transparent-light {
   color: rgba(255, 255, 255, 0.5) !important;
   background-color: rgba(0, 0, 0, 0.1) !important;
