--- a/css/styles.css
+++ b/css/styles.css
@@ -6200,7 +6200,7 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.55);
+  color: #B3B3B3;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 0.75);
@@ -10925,7 +10925,7 @@ textarea.form-control-lg {
 
 .text-white-50, .page-header-ui-dark .page-header-ui-text {
   --bs-text-opacity: 1;
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: #B3B3B3 !important;
 }
 
 .text-reset, .footer a {
